tests/pos/todo/simple/sEq.ts
/*@ foo :: (x: top) => { boolean | true } */
function foo(x:any): boolean {
    return (x === 3);
}

