tests/neg/operators/conditional-01.ts
//adapted from transducers

/*@ foo :: () => {string | true} */
function foo() {
  let bar = true ? 3 : null;
  return bar;
}
